--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>Component test</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <meta charset="utf-8">
 </head>
 <body>
@@ -18,14 +18,17 @@
             </div>
         </div>
     </div>
+    <div class="row accordion">
+        <h2>test</h2>
+    </div>
     <div class="row">
-        <div class="col pourcent">
+        <div class="col currency">
             <label>Montant</label>
-                <input type="number" />
+            <input type="text" placeholder="" />
         </div>
-        <div class="col">
-            <label>Texte</label>
-            <input type="text" />
+        <div class="col pourcent">
+            <label>Pourcentage</label>
+            <input type="text" placeholder="" />
         </div>
     </div>
     <div class="row">
@@ -58,6 +61,10 @@
         </div>
     </div>
     <div class="row">
+        <div class="col">
+            <label>Normal textinput</label>
+            <input placeholder="text" />
+        </div>
         <textarea class="line3" ></textarea>
     </div>
     <div class="row list">
