html et nouveau css fonctionnel

--- a/src/index.html
+++ b/src/index.html
@@ -118,5 +118,42 @@
             </blockquote>
             </div>
         </div>
+        <div class="modal-container">
+            <div class="modal">
+                <p>Modal cointainer et modal</p>
+            </div>
+        </div>
+        <h1>Template specific</h1>
+        <div class="row accordeon">
+            <h2>Accordeon template</h2>
+        </div>
+        <div class="row">
+            <div class="col infobox medium">
+                <div class="header">infobox header</div>
+                <p> infobox content dans un p</p>
+                <hr>
+                <p class="labeltxt">p class est labeltxt</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col full">
+                <h2 class="title">Template title </h2>
+            </div>
+        </div>
+        <div class="row">
+        <div class="col accordeon-box open">
+            <h4>accordeon box</h4>
+            <div class="box-content">
+                <div class="filter-button">
+                    <input type="checkbox" />
+                    <label>filter-button</label>
+                </div>
+                <h5>intertitre</h5>
+                <ul class="iconlist">
+                    <li class="vide"><a>icon-list</a></li>
+                </ul>
+            </div>
+        </div>
+        </div>
     </body>
 </html>
