--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,19 @@
         <div class="col" style="background-color:purple; height:100px;"></div>
     </div>
     <div class="row">
+        <div class="col xsmall wrap">
+            <label>Test de label</label>
+            <input type="text" />
+        </div>
+        <div class="col xsmall wrap">
+            <label>Test de label</label>
+            <input type="text" />
+        </div>
+
+    </div>
+
+
+    <div class="row">
         <div class="col input-group-noSubmit">
             <label>Input-group-noSubmit</label>
             <label class="shortlabel">USD</label>
