test and write cores element documentation

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             <input type="text" />
         </div>
         <div class="col xsmall wrap">
-            <label>Test de label</label>
+            <label class="textcolor-accent">Test de label</label>
             <input type="text" />
         </div>
 
@@ -34,7 +34,7 @@
             <label>input-group</label>
                 <label class="shortlabel">USD</label>
                 <input type="text" placeholder="" />
-                <input type="submit" value="OK" />
+                <input class="bgcolor-black" type="submit" value="OK" />
         </div>
     </div>
     <div class="row accordion">
@@ -54,7 +54,7 @@
     </div>
     <div class="row">
         <div class="col right">
-            <button >save that big big big form</button>
+            <button disabled>save that big big big form</button>
         </div>
 
     </div>
