component layout documented

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
         <h2>Accordion-icon</h2>
         <div class="col" style="background-color:purple; height:100px;"></div>
     </div>
+    <div class="row sticky"></div>
     <div class="row">
         <div class="col xsmall wrap">
             <label>Test de label</label>
