progress bar upgraded

--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,11 @@
         <div class="col">
             <h6>Progress bar</h6>
             <progress value="65" max="100"></progress>
+            <progress value="76" max="100"></progress>
+
+            <progress value="33" max="100"></progress>
+
+
         </div>
         <div class="col dropdown">
             <label>Dropdown</label>
@@ -127,8 +132,8 @@
         <div class="row">
             <div class="col">
             <blockquote>
-                Blockquote
-                <cite>cite</cite>
+                Less is more
+                <cite>Ludwig Mies Van Der Rohe</cite>
             </blockquote>
             </div>
         </div>
