better progress code

--- a/src/index.html
+++ b/src/index.html
@@ -123,10 +123,9 @@
             </a>
         </div>
         </div>
-        <div class="row">
-            <div class="col"></div>
-            <div class="col right">
-                <div class="tooltip-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis, leo nec rhoncus mattis, erat ante venenatis massa, vitae accumsan lorem mi at sem. Nulla ligula enim, placerat interdum odio quis, ultrices ornare nibh. Nam eu sem et dolor malesuada hendrerit. Sed ac mattis dui, ut vestibulum eros. In et pharetra tellus, sit amet aliquet augue. Proin tristique nunc quis mi euismod, eu egestas dui pretium. Pellentesque non tellus auctor, mollis sem vitae, bibendum dolor. Sed nulla purus, tempus vitae sem nec, convallis ullamcorper mauris. Praesent ut metus augue. Vivamus rhoncus justo eu sollicitudin lobortis. Suspendisse fermentum, lacus non varius consectetur, dui arcu laoreet diam, quis bibendum eros tortor non metus. Phasellus nec leo at arcu faucibus pharetra. Duis condimentum tortor ut nunc facilisis eleifend.</div>
+        <div class="row item-right">
+            <div class="col xsmall">
+                <div class="tooltip-right">Lorem ipsum dolor sit amet</div>
             </div>
         </div>
         <div class="row">
