checkbox et radio button

--- a/src/index.html
+++ b/src/index.html
@@ -62,12 +62,12 @@
     <div class="row">
         <div class="col radio">
             <label>Radio Button</label>
-            <label class="shortlabel">Red</label><input type="radio" name='test' id="test" /><label class="shortlabel" for='test'></label>
-            <label class="shortlabel">Blue</label><input type="radio" name='test' id="test2" /><label class="shortlabel" for='test2'></label>
+            <label>Red</label><input type="radio" name='test' id="test" /><label for='test'></label>
+            <label>Blue</label><input type="radio" name='test' id="test2" /><label for='test2'></label>
         </div>
         <div class="col checkbox">
             <label>Check Button</label>
-            <label class="shortlabel">Check</label><input type="checkbox" id="checktest" /><label class="shortlabel" for='checktest'></label>
+            <label>Check</label><input type="checkbox" id="checktest" /><label for='checktest'></label>
         </div>
     </div>
     <div class="row">
