--- a/src/index.html
+++ b/src/index.html
@@ -28,12 +28,12 @@
     <div class="row">
         <div class="col input-group-noSubmit">
             <label>Input-group-noSubmit</label>
-            <label class="shortlabel">USD</label>
+            <label>USD</label>
             <input type="text" placeholder="" />
         </div>
         <div class="col input-group">
             <label>input-group</label>
-                <label class="shortlabel">USD</label>
+                <label>USD</label>
                 <input type="text" placeholder="" />
                 <input class="bgcolor-black" type="submit" value="OK" />
         </div>
@@ -42,20 +42,24 @@
         <h2>accordion</h2>
     </div>
     <div class="row">
-        <div class="col currency">
+        <div class="col wrap">
                 <label for="currency">Currency</label>
-                <input type="number" id="currecncy" placeholder="" />
-                <shortlabel></shortlabel>
+                <div class="currency">
+                    <input type="number" id="currecncy" placeholder=" " />
+                    <label></label>
+            </div>
         </div>
-        <div class="col pourcent">
+        <div class="col nowrap">
             <label>Pourcent</label>
-            <input type="number" placeholder="" />
-            <shortlabel></shortlabel>
+            <div class="pourcent">
+                <input type="number" placeholder=" "  />
+                <label></label>
+            </div>
         </div>
     </div>
     <div class="row">
         <div class="col right">
-            <button disabled>save that big big big form</button>
+            <button>save that big big big form</button>
         </div>
 
     </div>
@@ -90,11 +94,11 @@
         </div>
     </div>
     <div class="row">
-        <div class="row-col">
+        <div class="col">
             <label>Normal textinput</label>
             <input type="text" placeholder="text" />
         </div>
-        <div class="row-col">
+        <div class="col">
             <label class="required">Textarea</label>
             <textarea class="line3" placeholder"3 lignes" ></textarea>
         </div>
@@ -138,6 +142,7 @@
         </div>
         <div class="modal-container">
             <div class="modal">
+                <h1> Modal container title</h1>
                 <p>Modal cointainer et modal</p>
             </div>
         </div>
