input group fixed need to put in doc

--- a/src/index.html
+++ b/src/index.html
@@ -26,16 +26,20 @@
 
 
     <div class="row">
-        <div class="col input-group-noSubmit">
+        <div class="col">
             <label>Input-group-noSubmit</label>
-            <label>USD</label>
-            <input type="text" placeholder="" />
+            <div class="input-group-noSubmit">
+                <label>USD</label>
+                <input type="text" placeholder="" />
+            </div>
         </div>
-        <div class="col input-group">
+        <div class="col">
             <label>input-group</label>
+                <div class="input-group">
                 <label>USD</label>
                 <input type="text" placeholder="" />
                 <input class="bgcolor-black" type="submit" value="OK" />
+            </div>
         </div>
     </div>
     <div class="row accordion">
